--- a/index.html
+++ b/index.html
@@ -703,52 +703,64 @@
                         <div class="steps-wrap">
                             <div class="step-block">
                                 <img src="./img/icons/step-1.svg" alt="step-1" class="step-block__icon">
+                                <div class="step-block__wrap">
+                                    <h4 class="step-block__header">STEP: 1 <div class="tringle-decorate"></div>
+                                    </h4>
+                                    <h5 class="step-block__subtitle">Genera Medicine</h5>
+                                    <hr class="step-block__line">
+                                    </hr>
+                                    <p class="step-block__info">Fill out an online form to apply for a Russian
+                                        university
+                                        Fill
+                                        out
+                                        an online form to apply</p>
+                                </div>
 
-                                <h4 class="step-block__header">STEP: 1 <div class="tringle-decorate"></div>
-                                </h4>
-                                <h5 class="step-block__subtitle">Genera Medicine</h5>
-                                <hr class="step-block__line">
-                                </hr>
-                                <p class="step-block__info">Fill out an online form to apply for a Russian university
-                                    Fill
-                                    out
-                                    an online form to apply</p>
                             </div>
                             <div class="step-block">
                                 <img src="./img/icons/step-2.svg" alt="step-1" class="step-block__icon">
-                                <h4 class="step-block__header">STEP: 2<div class="tringle-decorate"></div>
-                                </h4>
-                                <h5 class="step-block__subtitle">Genera Medicine</h5>
-                                <hr class="step-block__line">
-                                </hr>
-                                <p class="step-block__info">Fill out an online form to apply for a Russian university
-                                    Fill
-                                    out
-                                    an online form to apply</p>
+                                <div class="step-block__wrap">
+                                    <h4 class="step-block__header">STEP: 2<div class="tringle-decorate"></div>
+                                    </h4>
+                                    <h5 class="step-block__subtitle">Genera Medicine</h5>
+                                    <hr class="step-block__line">
+                                    </hr>
+                                    <p class="step-block__info">Fill out an online form to apply for a Russian
+                                        university
+                                        Fill
+                                        out
+                                        an online form to apply</p>
+                                </div>
                             </div>
                             <div class="step-block">
                                 <img src="./img/icons/step-3.svg" alt="step-1" class="step-block__icon">
-                                <h4 class="step-block__header">STEP: 3<div class="tringle-decorate"></div>
-                                </h4>
-                                <h5 class="step-block__subtitle">Genera Medicine</h5>
-                                <hr class="step-block__line">
-                                </hr>
-                                <p class="step-block__info">Fill out an online form to apply for a Russian university
-                                    Fill
-                                    out
-                                    an online form to apply</p>
+                                <div class="step-block__wrap">
+                                    <h4 class="step-block__header">STEP: 3<div class="tringle-decorate"></div>
+                                    </h4>
+                                    <h5 class="step-block__subtitle">Genera Medicine</h5>
+                                    <hr class="step-block__line">
+                                    </hr>
+                                    <p class="step-block__info">Fill out an online form to apply for a Russian
+                                        university
+                                        Fill
+                                        out
+                                        an online form to apply</p>
+                                </div>
                             </div>
                             <div class="step-block">
                                 <img src="./img/icons/step-4.svg" alt="step-1" class="step-block__icon">
-                                <h4 class="step-block__header">STEP: 4<div class="tringle-decorate"></div>
-                                </h4>
-                                <h5 class="step-block__subtitle">Genera Medicine</h5>
-                                <hr class="step-block__line">
-                                </hr>
-                                <p class="step-block__info">Fill out an online form to apply for a Russian university
-                                    Fill
-                                    out
-                                    an online form to apply</p>
+                                <div class="step-block__wrap">
+                                    <h4 class="step-block__header">STEP: 4<div class="tringle-decorate"></div>
+                                    </h4>
+                                    <h5 class="step-block__subtitle">Genera Medicine</h5>
+                                    <hr class="step-block__line">
+                                    </hr>
+                                    <p class="step-block__info">Fill out an online form to apply for a Russian
+                                        university
+                                        Fill
+                                        out
+                                        an online form to apply</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -756,7 +768,7 @@
                         <h3 class="admission-form__header">COMPLETE THE FORM</h3>
                         <p class="admission-form__subtitle">Fill out an online form to apply for Russian or Ukrainian
                             universities</p>
-                        <input type="text" placeholder="Name" class="admission-form__input">
+                        <input type="text" placeholder="First Name" class="admission-form__input">
                         <input type="email" placeholder="Email" class="admission-form__input">
                         <input type="tel" placeholder="Phone" class="admission-form__input">
                         <input type="text" placeholder="Country" class="admission-form__input">
@@ -764,8 +776,11 @@
                     </form>
                 </div>
             </div>
+            <img src="./img//icons/arrow-decorate.svg" alt="" class="arrow-decorate">
+
     </section>
     <section class="courses">
+        <img src="./img/icons/dots-decorate--reg.svg" alt="" class="dots-decorate">
         <div class="title-block">
             <img src="./img/icons/logo.svg" alt="logo" width="280" height="70" class="title-block__img">
             <div class="line">
@@ -894,10 +909,10 @@
                     </ul>
                 </div>
                 <div class="btn-wrap">
-                    <button class="btn slider-nav-btn slider-nav-btn--prev js-courses-slider__prev-btn"><i
-                            class="fas fa-arrow-left"></i></button>
-                    <button class="btn slider-nav-btn slider-nav-btn--next js-courses-slider__next-btn"><i
-                            class="fas fa-arrow-right"></i></button>
+                    <button class="btn slider-nav-btn slider-nav-btn--prev js-courses-slider__prev-btn"><img
+                            src="./img/icons/btn-prev.svg" alt="prev"></button>
+                    <button class="btn slider-nav-btn slider-nav-btn--next js-courses-slider__next-btn"><img
+                            src="./img//icons/btn-next.svg" alt="next"></button>
                 </div>
             </div>
             <div class="universities-navigations">
@@ -1154,7 +1169,8 @@
             <img src="./img/icons/telephone.svg" class="telephones__icon" alt="tel">
             <div class="telephones__inner">
                 <a href="tel:+380637909294" class="telephones__link">+38 (063) 790-92-94</a>
-                <a href="tel:+79092077688" class="telephones__link">+7 (909) 207-76-88</a>
+                <a href="tel:+79092077688" class="telephones__link telephones__link--rus">+7 (909)
+                    207-76-88</a>
             </div>
             <!-- </div> -->
         </div>
