--- a/index.html
+++ b/index.html
@@ -373,6 +373,8 @@
                     <h4 class="header-slider__assistant-subtitle">CourseS</h4>
                     <div class="subtitle-wrap">
                         <img src="./img/photo/dots.svg" alt="" class="dots-img">
+
+
                         <h2 class="header-slider__subtitle">Education in Russian
                             <span class="header-subtitle-decorate">or Ukrainian medium</span> </h2>
                     </div>
@@ -670,11 +672,22 @@
                     </ul>
                 </div>
                 <div class="btn-wrap">
-                    <button class="btn slider-nav-btn slider-nav-btn--prev js-university-slider__prev-btn"><i
-                            class="fas fa-arrow-left"></i></button>
+                    <!-- <button class="btn slider-nav-btn slider-nav-btn--prev js-university-slider__prev-btn"><i
+                            class="fas fa-arrow-left"></i></button> -->
+                    <button
+                        class="btn slider-nav-btn slider-nav-btn--blue slider-nav-btn--prev js-university-slider__prev-btn"><img
+                            src="./img/icons/btn-prev.svg" alt="" width="35" height="35"></button>
                     <button class="btn slider-nav-btn slider-nav-btn--next js-university-slider__next-btn"><i
                             class="fas fa-arrow-right"></i></button>
                 </div>
+
+                <!-- <div class="header-slider__buttons">
+                    <button class="slider-header-btn js-header-slide-prev"><img src="./img/icons/btn-prev.svg"
+                            alt="" width="35" height="35"></button>
+                    <button class="slider-header-btn js-header-slide-next"><img src="./img/icons/next-btn.svg"
+                            alt="" width="35" height="35"></button>
+
+                </div> -->
             </div>
             <div class="universities-navigations">
                 <button class="btn btn--university">TOP UNIVERSITiES</button>
@@ -910,9 +923,9 @@
                 </div>
                 <div class="btn-wrap">
                     <button class="btn slider-nav-btn slider-nav-btn--prev js-courses-slider__prev-btn"><img
-                            src="./img/icons/btn-prev.svg" alt="prev"></button>
+                            src="./img/icons/prev-btn-blue.svg" alt="prev"></button>
                     <button class="btn slider-nav-btn slider-nav-btn--next js-courses-slider__next-btn"><img
-                            src="./img//icons/btn-next.svg" alt="next"></button>
+                            src="./img//icons/next-btn-Blue.svg" alt="next"></button>
                 </div>
             </div>
             <div class="universities-navigations">
@@ -1034,6 +1047,7 @@
         </div>
     </section>
     <section class="feedback">
+        <img src="./img/photo/feedback-arrow-decorate.svg" class="feedback-arrow-decorate" alt="">
         <div class="container">
             <div class="title-block">
                 <h3 class="title-block__header">
@@ -1071,9 +1085,10 @@
                     <div class="feedback-item">
                         <div class="feedback-item__inner">
                             <img src="./img/photo/feedback-img.png" alt="feedback" class="feedback-item__img">
-                            <!-- <div class="feedback-item__info"> -->
-                            <h3 class="feedback-item__title">Panashe Phiri, Zimbabwe</h3>
-                            <h6 class="feedback-item__subtitle">A student of Chechen State University</h6>
+                            <div class="feedback-item__info">
+                                <h3 class="feedback-item__title">Panashe Phiri, Zimbabwe</h3>
+                                <h6 class="feedback-item__subtitle">A student of Chechen State University</h6>
+                            </div>
                             <p class="feedback-item__text">I would like to thank Edugain Overseas representatives so
                                 much,
                                 especially Ms. Ekateryna, who has been there for me during the whole application
@@ -1088,7 +1103,7 @@
                                 places
                                 to visit in Grozny! Thank you once again!</p>
                         </div>
-                        <!-- </div> -->
+
                     </div>
                     <div class="feedback-item">
                         <div class="feedback-item__inner">
@@ -1178,7 +1193,7 @@
             <h3 class="form-title">Or fill in the form</h3>
             <form action="" class="footer-form">
                 <input type="text" placeholder="First Name" class="footer-form__input footer-form__input--name">
-                <input type=" text" placeholder="Country" class="footer-form__input footer-form__input--country">
+                <input type="text" placeholder="Country" class="footer-form__input footer-form__input--country">
                 <input type="text" placeholder="Phone Number" class="footer-form__input footer-form__input--phone">
                 <input type="email" placeholder="Email Adress" class="footer-form__input footer-form__input--email">
                 <input type="submit" class="btn footer-form__btn" value="Request Info">
@@ -1213,17 +1228,17 @@
                 <div class="footer-item footer-item--contact">
                     <h3 class="footer-item__title">Contact us</h3>
                     <h4 class="footer-item__subtitle">For Admissions:</h4>
-                    <a href="" class="footer-item__link"> WhatsApp/Viber: +380 63 790 92 94
+                    <a href="tel:+380637909294" class="footer-item__link"> WhatsApp/Viber: +380 63 790 92 94
                     </a>
-                    <a href="" class="footer-item__link"> WhatsApp: +7 909 207 76 88
-                    </a>
-                    <a href="" class="footer-item__link"> Email: admissions@edugainoverseas.com
-                    </a>
-                    <h4 class="footer-item__subtitle">For Cooperation:</h4>
-                    <a href="" class="footer-item__link"> WhatsApp/Viber: +380 63 790 92 94
-
+                    <a href="tel:+79092077688" class="footer-item__link"> WhatsApp: +7 909 207 76 88
                     </a>
                     <a href="" class="footer-item__link"> Email: admissions@edugainoverseas.com
+                    </a>
+                    <h4 class="footer-item__subtitle footer-item__subtitle--last">For Cooperation:</h4>
+                    <a href="tel:+380637909294" class="footer-item__link"> WhatsApp/Viber: +380 63 790 92 94
+                    </a>
+                    <a href="mailto:admissions@edugainoverseas.com" class="footer-item__link"> Email:
+                        admissions@edugainoverseas.com
                     </a>
                 </div>
             </div>
