--- a/index.html
+++ b/index.html
@@ -675,10 +675,12 @@
                     <!-- <button class="btn slider-nav-btn slider-nav-btn--prev js-university-slider__prev-btn"><i
                             class="fas fa-arrow-left"></i></button> -->
                     <button
-                        class="btn slider-nav-btn slider-nav-btn--blue slider-nav-btn--prev js-university-slider__prev-btn"><img
-                            src="./img/icons/btn-prev.svg" alt="" width="35" height="35"></button>
-                    <button class="btn slider-nav-btn slider-nav-btn--next js-university-slider__next-btn"><i
-                            class="fas fa-arrow-right"></i></button>
+                        class="slider-nav-btn slider-nav-btn--blue slider-nav-btn--prev js-university-slider__prev-btn">
+                        <img src="./img/icons/prev-btn-blue.svg" alt="">
+                    </button>
+                    <button class="slider-nav-btn slider-nav-btn--next js-university-slider__next-btn">
+                        <img src="./img/icons/next-btn-Blue.svg" alt="">
+                    </button>
                 </div>
 
                 <!-- <div class="header-slider__buttons">
@@ -922,10 +924,11 @@
                     </ul>
                 </div>
                 <div class="btn-wrap">
-                    <button class="btn slider-nav-btn slider-nav-btn--prev js-courses-slider__prev-btn"><img
-                            src="./img/icons/prev-btn-blue.svg" alt="prev"></button>
-                    <button class="btn slider-nav-btn slider-nav-btn--next js-courses-slider__next-btn"><img
-                            src="./img//icons/next-btn-Blue.svg" alt="next"></button>
+                    <button class="slider-nav-btn slider-nav-btn--prev js-courses-slider__prev-btn">
+                        <img src="./img/icons/prev-btn-blue.svg" alt="prev"></button>
+                    <button class="slider-nav-btn slider-nav-btn--next js-courses-slider__next-btn">
+                        <img src="./img/icons/next-btn-Blue.svg" alt="next">
+                    </button>
                 </div>
             </div>
             <div class="universities-navigations">
@@ -1038,10 +1041,12 @@
                     </ul>
                 </div>
                 <div class="btn-wrap">
-                    <button class="btn slider-nav-btn slider-nav-btn--prev js-gallery-slider__prev-btn"><i
-                            class="fas fa-arrow-left"></i></button>
-                    <button class="btn slider-nav-btn slider-nav-btn--next js-gallery-slider__next-btn"><i
-                            class="fas fa-arrow-right"></i></button>
+                    <button class="slider-nav-btn slider-nav-btn--prev js-gallery-slider__prev-btn">
+                        <img src="./img/icons/prev-btn-blue.svg" alt="prev">
+                    </button>
+                    <button class="slider-nav-btn slider-nav-btn--next js-gallery-slider__next-btn">
+                        <img src="./img/icons/next-btn-Blue.svg" alt="next">
+                    </button>
                 </div>
             </div>
         </div>
@@ -1072,10 +1077,12 @@
                     </ul> -->
 
                     <div class="btn-wrap">
-                        <button class="btn slider-nav-btn slider-nav-btn--prev js-feedback-slider__prev-btn"><i
-                                class="fas fa-arrow-left"></i></button>
-                        <button class="btn slider-nav-btn slider-nav-btn--next js-feedback-slider__next-btn"><i
-                                class="fas fa-arrow-right"></i></button>
+                        <button class="slider-nav-btn slider-nav-btn--prev js-feedback-slider__prev-btn">
+                            <img src="./img/icons/prev-btn-blue.svg" alt="prev">
+                        </button>
+                        <button class="slider-nav-btn slider-nav-btn--next js-feedback-slider__next-btn">
+                            <img src="./img/icons/next-btn-Blue.svg" alt="next">
+                        </button>
                     </div>
                 </div>
                 <div class="quotes">
