add diamond decorate

--- a/index.html
+++ b/index.html
@@ -1053,6 +1053,9 @@
     </section>
     <section class="feedback">
         <img src="./img/photo/feedback-arrow-decorate.svg" class="feedback-arrow-decorate" alt="">
+        <div class="diamond-decorate diamond-decorate--grey">
+            <div class="diamond-decorate-transparent"></div>
+        </div>
         <div class="container">
             <div class="title-block">
                 <h3 class="title-block__header">
