add decorate elements

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                 </div>
                 <div class="header-slider__block">
                     <h1 class="header-slider__mail-title js-title">Business</h1>
-                    <h4 class="header-slider__assistant-subtitle">CourseS</h4>
+                    <h4 class="header-slider__assistant-subtitle">Courses</h4>
                     <div class="subtitle-wrap">
                         <img src="./img/photo/dots.svg" alt="" class="dots-img">
 
@@ -507,6 +507,8 @@
         </div>
     </div>
     <section class="universities">
+        <img src="./img/icons/dots-decorate--reg.svg" alt="" class="dots-decorate dots-decorate-red">
+        <img src="./img/icons/dots-decorate--blue.svg" alt="" class="dots-decorate dots-decorate-blue">
 
         <div class="rectangle-decorate-block">
             <img class="rectangle-decorate-block__arr-transparent" src="./img/icons/arr-decorateTranspatent.svg" alt="">
@@ -698,11 +700,13 @@
                 <button class="btn btn--university btn--posive">LEARN MORE</button>
             </div>
         </div>
+
     </section>
     <section class="admission">
         <div class="diamond-decorate  diamond-decorate--blue">
             <div class="diamond-decorate-transparent"></div>
         </div>
+
         <div class="container">
             <div class="admission-block-wrap">
                 <div class="admission-item-wrap">
@@ -798,6 +802,7 @@
         <img src="./img/icons/dots-decorate--reg.svg" alt="" class="dots-decorate">
         <div class="title-block">
             <img src="./img/icons/logo.svg" alt="logo" width="280" height="70" class="title-block__img">
+
             <div class="line">
                 <span class="line-circle"></span>
             </div>
@@ -960,6 +965,7 @@
     </section>
     <section class="benefits">
         <img src="./img//icons/arrow-decorate.svg" alt="" class="arrow-decorate">
+        <img src="./img/icons/dots-decorate--blue.svg" alt="" class="dots-decorate">
 
         <div class="container">
             <div class="title-block">
