fix header decor

--- a/index.html
+++ b/index.html
@@ -335,9 +335,13 @@
 
         </div> -->
         <!-- <div class="header-slider-absolute"> -->
+
+
         <div class="rectangle-decorate">
-            <div class="rectangle-decorate__inner"></div>
-            <img src="./img//icons/arrow-decorate.svg" alt="" class="arrow-decorate">
+            <div class="rectangle-decorate__inner">
+
+                <!-- <img src="./img//icons/arrow-decorate.svg" alt="" class="arrow-decorate"> -->
+            </div>
         </div>
 
 
