position fixed nav-links

--- a/index.html
+++ b/index.html
@@ -18,6 +18,30 @@
 </head>
 
 <body>
+    <div class="social-nav-wrap">
+        <nav class="social-nav social-nav--index">
+            <ul class="social-nav__list">
+                <div class="social-nav__main"><img src="img/icons//whatsapp 1.svg" alt=""></div>
+                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/envelope.svg"
+                            alt=""></a></li>
+                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/whatsUp.svg"
+                            alt=""></a></li>
+                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/vider.svg"
+                            alt=""></a></li>
+                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/telegram.svg"
+                            alt=""></a></li>
+                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/instagram.svg"
+                            alt=""></a></li>
+                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/linked-in.svg"
+                            alt=""></a></li>
+                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/facebook.svg"
+                            alt=""></a></li>
+                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/youtube.svg"
+                            alt=""></a></li>
+
+            </ul>
+        </nav>
+    </div>
     <header class="header" id="header">
         <div class="adaptive-header">
             <div class="container">
@@ -298,28 +322,8 @@
         <img src="./img//icons/arrow-decorate.svg" width="216" height="322" alt=""
             class="arrow-decorate arrow-decorate--right">
 
-        <nav class="social-nav">
-            <ul class="social-nav__list">
-                <div class="social-nav__main"><img src="img/icons//whatsapp 1.svg" alt=""></div>
-                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/envelope.svg"
-                            alt=""></a></li>
-                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/whatsUp.svg"
-                            alt=""></a></li>
-                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/vider.svg"
-                            alt=""></a></li>
-                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/telegram.svg"
-                            alt=""></a></li>
-                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/instagram.svg"
-                            alt=""></a></li>
-                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/linked-in.svg"
-                            alt=""></a></li>
-                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/facebook.svg"
-                            alt=""></a></li>
-                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/youtube.svg"
-                            alt=""></a></li>
 
-            </ul>
-        </nav>
+
         <!-- jquery slider try -->
 
         <!-- <div class="header-slider-wrap">
@@ -707,7 +711,7 @@
 
     </section>
     <section class="admission">
-        <div class="diamond-decorate  diamond-decorate--blue">
+        <div class="diamond-decorate diamond-decorate--blue">
             <div class="diamond-decorate-transparent"></div>
         </div>
 
@@ -947,7 +951,9 @@
     </section>
     <section class="academic-header">
         <img src="./img//icons/arrow-decorate.svg" alt="" class="arrow-decorate">
-
+        <div class="diamond-decorate diamond-decorate--red">
+            <div class="diamond-decorate-transparent"></div>
+        </div>
         <div class="container">
             <div class="academic-header__content">
                 <img class="academic-header__icon" src="./img/icons/graduation-icon.svg" alt="graduation">
